--- a/.github/workflows/buildpipelnine.yml
+++ b/.github/workflows/buildpipelnine.yml
@@ -15,7 +15,7 @@ jobs:
       - uses: actions/checkout@v3
     
       - name: setup .NET
-        uses: actions/setupdotnet@v2
+        uses: actions/setup-dotnet@v2
         with:
             dotnet-version: 6.0.x
       
