--- a/.github/workflows/buildpipelnine.yml
+++ b/.github/workflows/buildpipelnine.yml
@@ -17,7 +17,7 @@ jobs:
       - name: setup .NET
         uses: actions/setup-dotnet@v2
         with:
-            dotnet-version: 4.8.x
+            dotnet-version: 7.0
       
       - name: Install dependencies
         run: dotnet restore
