--- a/.github/workflows/buildpipelnine.yml
+++ b/.github/workflows/buildpipelnine.yml
@@ -27,6 +27,6 @@ jobs:
         run: dotnet build --configuration Release --no-restore
         working-directory: src/SampleLibrary
 
-      - name: Test
-        run: dotnet test --no-restore --verbosity normal --collect:"XPlat Code Coverage"
-        working-directory: src/SampleLibrary
+#      - name: Test
+#        run: dotnet test --no-restore --verbosity normal --collect:"XPlat Code Coverage"
+#        working-directory: src/SampleLibrary
