--- a/.github/workflows/buildpipelnine.yml
+++ b/.github/workflows/buildpipelnine.yml
@@ -28,7 +28,7 @@ jobs:
         working-directory: src/SampleLibrary
 
 #      - name: Test
-#        run: dotnet test --no-restore --verbosity normal --collect:"XPlat Code Coverage"
+##        run: dotnet test --no-restore --verbosity normal --collect:"XPlat Code Coverage"
 #        working-directory: src/SampleLibrary
 
       - name: Publish code coverage reports to codecove.io
