--- a/.github/workflows/buildpipelnine.yml
+++ b/.github/workflows/buildpipelnine.yml
@@ -1,39 +1,31 @@
 name: build
 
 on:
-  push:
-    branches: 
-      - feature/*
-  pull_request:
-    branches: [master]
+    push:
+        branches: [master]
+    pull_request:
+        branches: [master]
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
-    
-    steps:
-      - uses: actions/checkout@v3
-    
-      - name: setup .NET
-        uses: actions/setup-dotnet@v2
-        with:
-            dotnet-version: 7.0.*
-      
-      - name: Install dependencies
-        run: dotnet restore
-        working-directory: src/SampleLibrary
+    build:
+        runs-on: ubuntu-latest
 
-      - name: Build
-        run: dotnet build --configuration Release --no-restore
-        working-directory: src/SampleLibrary
+        steps:
+            - uses: actions/checkout@v3
 
-#      - name: Test
-##        run: dotnet test --no-restore --verbosity normal --collect:"XPlat Code Coverage"
-#        working-directory: src/SampleLibrary
+            - name: Setup .NET
+              uses: actions/setup-dotnet@v2
+              with:
+                  dotnet-version: 6.0.x
 
-      - name: Publish code coverage reports to codecove.io
-        uses: codecov/codecov-action@v1
-        with:
-            token: ${{ secrets.CODECOV_TOKEN }}
-            files: ./**/coverage.cobertura.xml
-            fail_ci_if_error: true
+            - name: Install dependencies
+              run: dotnet restore
+              working-directory: src/SampleLibrary
+
+            - name: Build
+              run: dotnet build --configuration Release --no-restore
+              working-directory: src/SampleLibrary
+
+            - name: Test
+              run: dotnet test --no-restore --verbosity normal --collect:"XPlat Code Coverage"
+              working-directory: src/SampleLibrary
