--- a/src/SampleLibrary/SampleLibrary.Test/SampleLibrary.Test.csproj
+++ b/src/SampleLibrary/SampleLibrary.Test/SampleLibrary.Test.csproj
@@ -37,6 +37,9 @@
       <None Update="TestFolder\a.txt">
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </None>
+      <None Update="TestFolder\b.txt">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
     </ItemGroup>
 
 </Project>
