--- a/src/SampleLibrary/SampleLibrary.Test/SampleLibrary.Test.csproj
+++ b/src/SampleLibrary/SampleLibrary.Test/SampleLibrary.Test.csproj
@@ -5,6 +5,10 @@
         <IsPackable>false</IsPackable>
     </PropertyGroup>
 
+    <PropertyGroup>
+        <PublishWithAspNetCoreTargetManifest>false</PublishWithAspNetCoreTargetManifest>
+    </PropertyGroup>
+
     <ItemGroup>
         <PackageReference Include="FluentAssertions" Version="6.10.0" />
         <PackageReference Include="Microsoft.CodeCoverage" Version="17.5.0" />
