--- a/src/SampleLibrary/SampleLibrary/SampleLibrary.csproj
+++ b/src/SampleLibrary/SampleLibrary/SampleLibrary.csproj
@@ -6,6 +6,10 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <PropertyGroup>
+    <PublishWithAspNetCoreTargetManifest>false</PublishWithAspNetCoreTargetManifest>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="StemmersNet" Version="1.1.1" />
     <PackageReference Include="FluentAssertions" Version="6.10.0" />
