--- a/.github/workflows/buildPipeline.yml
+++ b/.github/workflows/buildPipeline.yml
@@ -31,3 +31,7 @@ jobs:
               working-directory: src/SampleLibrary
             - name: Publish code coverage reports to codecove.io
               uses: codecov/codecov-action@v3
+              with:
+                  token: ${{ secrets.CODECOV_TOKEN }}
+                  files: ./**/coverage.cobertura.xml
+                  fail_ci_if_error: true
