--- a/.github/workflows/buildPipeline.yml
+++ b/.github/workflows/buildPipeline.yml
@@ -33,5 +33,5 @@ jobs:
               uses: codecov/codecov-action@v3
               with:
                   token: ${{ secrets.CODECOV_TOKEN }}
-                  files: ./**/Untitled.xml
+                  files: /home/runner/work/Winter1401-SE/Winter1401-SE/Untitled.xml
                   fail_ci_if_error: true
