--- a/src/SampleLibrary/SampleLibrary/SampleLibrary.csproj
+++ b/src/SampleLibrary/SampleLibrary/SampleLibrary.csproj
@@ -3,6 +3,9 @@
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
+    <PackageId>StarAcademy.CodeStar1401.Team1.InvertedIndexZ</PackageId>
+    <Authors>Mahdi Mohammadi</Authors>
+    <Company>Star Academy</Company>
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
