--- a/src/ASP.NET core web application/ASP.NET core web application/ASP.NET core web application.csproj
+++ b/src/ASP.NET core web application/ASP.NET core web application/ASP.NET core web application.csproj
@@ -9,8 +9,17 @@
 
     <ItemGroup>
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.2" />
-        <PackageReference Include="StarAcademy.CodeStar1401.Team1.InvertedIndexZ" Version="2.0.0" />
+        <PackageReference Include="StarAcademy.CodeStar1401.Team1.InvertedIndexZ" Version="3.0.0" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <None Update="TestFolder\a.txt">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
+      <None Update="TestFolder\b.txt">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
     </ItemGroup>
 
 </Project>
